# zombie

./: Cargo.toml  ambient.toml
assets/: Zombie Reaction Hit.fbx
src/: client.rs  server.rs
